force-app/main/default/objects/FundingAwardAmendment/fields/I_will_be_able_to_comply_with_scheme__c.field-meta.xml
<CustomField>
    <fullName>I_will_be_able_to_comply_with_scheme__c</fullName>
    <inlineHelpText>If the phase will see greater than 15% of grant funding and/or 15% total funding spend on A&amp;A costs, I confirm I will still be able to comply with the scheme&apos;s A&amp;A policy for the overall project.</inlineHelpText>
    <label>I will be able to comply with scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>