force-app/main/default/objects/FundingAwardAmendment/fields/Implementation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Plan__c</fullName>
    <description>Work required to implement the change.
(max 500 words)</description>
    <label>Implementation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>