force-app/main/default/objects/FundingAwardAmendment/fields/Implications_If_Not_Approved__c.field-meta.xml
<CustomField>
    <fullName>Implications_If_Not_Approved__c</fullName>
    <description>Resulting impact on outputs and outcomes achievement.
(max 500 words)</description>
    <label>Implications If Not Approved</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>