force-app/main/default/objects/FundingAwardAmendment/fields/Income_verification__c.field-meta.xml
<CustomField>
    <fullName>Income_verification__c</fullName>
    <description>any changes to the approach stated in Section 6 of your DAC form</description>
    <label>Income verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>