force-app/main/default/objects/FundingAwardAmendment/fields/Individual_Applicants_Only__c.field-meta.xml
<CustomField>
    <fullName>Individual_Applicants_Only__c</fullName>
    <label>Individual Applicants Only</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Not_Applicable</valueSetName>
    </valueSet>
</CustomField>