force-app/main/default/objects/FundingAwardAmendment/fields/Intending_to_submit_drawdown_request__c.field-meta.xml
<CustomField>
    <fullName>Intending_to_submit_drawdown_request__c</fullName>
    <inlineHelpText>Are you intending to submit a drawdown request for this phase during this phase?</inlineHelpText>
    <label>Intending to submit drawdown request?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>