force-app/main/default/objects/FundingAwardAmendment/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <inlineHelpText>Please include a justification of why you won&apos;t be able to comply with the scheme&apos;s A&amp;A policy.</inlineHelpText>
    <label>Justification non comply with scheme</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>