force-app/main/default/objects/FundingAwardAmendment/fields/Justification_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Approval__c</fullName>
    <label>Justification for Approval</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>