force-app/main/default/objects/FundingAwardAmendment/fields/Justification_for_not_matching_baseline__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_not_matching_baseline__c</fullName>
    <inlineHelpText>Please include a justification of why this phase request does not match your previously submitted baseline.</inlineHelpText>
    <label>Justification for not matching baseline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>