force-app/main/default/objects/FundingAwardAmendment/fields/Justification_for_plans__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_plans__c</fullName>
    <label>Justification for plans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>