force-app/main/default/objects/FundingAwardAmendment/fields/Justification_haven_t_updated_PP_RR__c.field-meta.xml
<CustomField>
    <fullName>Justification_haven_t_updated_PP_RR__c</fullName>
    <inlineHelpText>Please include a justification of why you haven&apos;t updated your project plan and risk register.</inlineHelpText>
    <label>Justification haven&apos;t updated PP/RR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>