force-app/main/default/objects/FundingAwardAmendment/fields/Justification_no_GFA_FRA_or_FMP__c.field-meta.xml
<CustomField>
    <fullName>Justification_no_GFA_FRA_or_FMP__c</fullName>
    <inlineHelpText>Please include a justification of why you haven&apos;t received your GFA or updated your FRA/FMP.</inlineHelpText>
    <label>Justification no GFA, FRA or FMP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>