force-app/main/default/objects/FundingAwardAmendment/fields/Justification_not_aware_of_payments__c.field-meta.xml
<CustomField>
    <fullName>Justification_not_aware_of_payments__c</fullName>
    <inlineHelpText>Please include a justification of why you&apos;re not aware that payments will be issued by DESNZ up to two months after the drawdown submission date.</inlineHelpText>
    <label>XJustification not aware of payments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>