force-app/main/default/objects/FundingAwardAmendment/fields/Justification_not_intend_to_submit_GD__c.field-meta.xml
<CustomField>
    <fullName>Justification_not_intend_to_submit_GD__c</fullName>
    <label>Justification not intend to submit GD</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>