force-app/main/default/objects/FundingAwardAmendment/fields/Justification_of_measures_not_compliant__c.field-meta.xml
<CustomField>
    <fullName>Justification_of_measures_not_compliant__c</fullName>
    <inlineHelpText>Please include a justification of why all measure types are not compliant.</inlineHelpText>
    <label>Justification of measures not compliant</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>