force-app/main/default/objects/FundingAwardAmendment/fields/Justification_of_non_acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Justification_of_non_acknowledgement__c</fullName>
    <inlineHelpText>Please include a justification of why you don&apos;t acknowledge this phase request will result in a change.</inlineHelpText>
    <label>Justification of non acknowledgement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>