force-app/main/default/objects/FundingAwardAmendment/fields/Justification_Prim_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Justification_Prim_Contractor__c</fullName>
    <inlineHelpText>Please provide assurance of the Prime Contractor being signed-up in time for Phase commencement.</inlineHelpText>
    <label>Justification of Primary Contractor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>