force-app/main/default/objects/FundingAwardAmendment/fields/KPI1_Justification__c.field-meta.xml
<CustomField>
    <fullName>KPI1_Justification__c</fullName>
    <inlineHelpText>Please include a justification of why this is the case as well as the true % of resident sign ups.</inlineHelpText>
    <label>KPI1 Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>