force-app/main/default/objects/FundingAwardAmendment/fields/KPI2_Justification__c.field-meta.xml
<CustomField>
    <fullName>KPI2_Justification__c</fullName>
    <inlineHelpText>Please include a justification of why this is the case as well as the true % of completed retrofit assessments.</inlineHelpText>
    <label>KPI2 Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>