force-app/main/default/objects/FundingAwardAmendment/fields/KPI_1_homes_identified_suitable__c.field-meta.xml
<CustomField>
    <fullName>KPI_1_homes_identified_suitable__c</fullName>
    <label>KPI 1 - # homes identified suitable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>