force-app/main/default/objects/FundingAwardAmendment/fields/KPI_2_homes_ready_to_start__c.field-meta.xml
<CustomField>
    <fullName>KPI_2_homes_ready_to_start__c</fullName>
    <label>KPI 2 - #homes ready to start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>