force-app/main/default/objects/FundingAwardAmendment/fields/Lead_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Applicant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Request</relationshipName>
    <type>Lookup</type>
</CustomField>