force-app/main/default/objects/FundingAwardAmendment/fields/Lead_PSO_Days_Response_Time_DELETE__c.field-meta.xml
<CustomField>
    <fullName>Lead_PSO_Days_Response_Time_DELETE__c</fullName>
    <formula>Date_Lead_PSO_RAG_Status_Applied_DELETE__c -  DATEVALUE(  CreatedDate )</formula>
    <label>Lead PSO Actual Days Response TimDELETE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>