force-app/main/default/objects/FundingAwardAmendment/fields/Lead_PSO_DESNZ_RAG_Rating_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Lead_PSO_DESNZ_RAG_Rating_Agreed__c</fullName>
    <formula>IF( TEXT(Lead_PSO_RAG_Rating__c) = TEXT( Final_RAG_Rating__c ), &quot;Agreed on RAG Rating&quot;, &quot;Not agreed on RAG Rating&quot;)</formula>
    <label>Lead PSO/DESNZ RAG Rating Agreed?</label>
    <type>Text</type>
</CustomField>