force-app/main/default/objects/FundingAwardAmendment/fields/Lead_PSO_RAG_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lead_PSO_RAG_Rating__c</fullName>
    <label>Lead PSO RAG Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>