force-app/main/default/objects/FundingAwardAmendment/fields/Lead_PSO_RAG_Rating_Applied_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_PSO_RAG_Rating_Applied_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead PSO RAG Rating Applied By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>