force-app/main/default/objects/FundingAwardAmendment/fields/Max_co_funded_costs_off_gas_LCH_29_30__c.field-meta.xml
<CustomField>
    <fullName>Max_co_funded_costs_off_gas_LCH_29_30__c</fullName>
    <label>Max co-funded costs off gas LCH 29/30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>