force-app/main/default/objects/FundingAwardAmendment/fields/Max_grant_funded_costs_LCH_homes_27_28__c.field-meta.xml
<CustomField>
    <fullName>Max_grant_funded_costs_LCH_homes_27_28__c</fullName>
    <label>Max grant funded costs on gas LCH 27/28</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>