force-app/main/default/objects/FundingAwardAmendment/fields/Max_grant_funded_costs_off_gas_LCH_2627__c.field-meta.xml
<CustomField>
    <fullName>Max_grant_funded_costs_off_gas_LCH_2627__c</fullName>
    <label>Max grant funded costs off gas LCH 26/27</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>