force-app/main/default/objects/FundingAwardAmendment/fields/Maximum_co_funded_capital_costs_27_28__c.field-meta.xml
<CustomField>
    <fullName>Maximum_co_funded_capital_costs_27_28__c</fullName>
    <label>Maximum co-funded capital costs 27/28</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>