force-app/main/default/objects/FundingAwardAmendment/fields/Maximum_total_A_A_costs_25_26__c.field-meta.xml
<CustomField>
    <fullName>Maximum_total_A_A_costs_25_26__c</fullName>
    <formula>Maximum_co_funded_A_A_costs_25_26__c +  Maximum_grant_funded_A_A_costs_25_26__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum total A&amp;A costs 25/26</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>