force-app/main/default/objects/FundingAwardAmendment/fields/Maximum_total_capital_costs_27_28__c.field-meta.xml
<CustomField>
    <fullName>Maximum_total_capital_costs_27_28__c</fullName>
    <formula>Maximum_co_funded_capital_costs_27_28__c +  Maximum_grant_funded_capital_costs_27_28__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum total capital costs 27/28</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>