force-app/main/default/objects/FundingAwardAmendment/fields/Maximum_total_grant_funding_26_27__c.field-meta.xml
<CustomField>
    <fullName>Maximum_total_grant_funding_26_27__c</fullName>
    <formula>Maximum_grant_funded_capital_costs_26_27__c  +   Maximum_grant_funded_A_A_costs_26_27__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum total grant funding 26/27</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>