force-app/main/default/objects/FundingAwardAmendment/fields/Maximum_total_phase_costs_27_28__c.field-meta.xml
<CustomField>
    <fullName>Maximum_total_phase_costs_27_28__c</fullName>
    <formula>Maximum_total_co_funding_27_28__c +  Maximum_total_grant_funding_27_28__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum total phase costs 27/28</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>