force-app/main/default/objects/FundingAwardAmendment/fields/Mitigating_Actions__c.field-meta.xml
<CustomField>
    <fullName>Mitigating_Actions__c</fullName>
    <label>Mitigating Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>