force-app/main/default/objects/FundingAwardAmendment/fields/Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Mitigation__c</fullName>
    <description>We expect you to have considered alternative options before submitting a change request. Please outline explicitly any action you have taken to try and minimise the need for this change, particularly for changes to expenditure.
(max 500 words)</description>
    <label>Mitigation</label>
    <type>TextArea</type>
</CustomField>