force-app/main/default/objects/FundingAwardAmendment/fields/New_forecast_of_homes_to_be_upgraded__c.field-meta.xml
<CustomField>
    <fullName>New_forecast_of_homes_to_be_upgraded__c</fullName>
    <description>New Projected forecast of total number of homes to be upgraded</description>
    <label>New forecast of homes to be upgraded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>