force-app/main/default/objects/FundingAwardAmendment/fields/No_homes__c.field-meta.xml
<CustomField>
    <fullName>No_homes__c</fullName>
    <inlineHelpText>No. of homes accessing the on gas grid LCH incentive offer in phase</inlineHelpText>
    <label>No. homes accessing on gas grid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>