force-app/main/default/objects/FundingAwardAmendment/fields/No_homes_completed_KPI_5__c.field-meta.xml
<CustomField>
    <fullName>No_homes_completed_KPI_5__c</fullName>
    <inlineHelpText>No. of homes completed (all measures lodged with Trustmark) (KPI 5)</inlineHelpText>
    <label>No. homes completed (KPI 5)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>