force-app/main/default/objects/FundingAwardAmendment/fields/No_homes_off_gas_grid__c.field-meta.xml
<CustomField>
    <fullName>No_homes_off_gas_grid__c</fullName>
    <inlineHelpText>No. of homes accessing the off gas grid LCH cost cap uplift in phase</inlineHelpText>
    <label>No. homes off gas grid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>