force-app/main/default/objects/FundingAwardAmendment/fields/No_homes_to_be_upgraded_in_phase__c.field-meta.xml
<CustomField>
    <fullName>No_homes_to_be_upgraded_in_phase__c</fullName>
    <inlineHelpText>Total number of homes to be upgraded in phase</inlineHelpText>
    <label>No. homes to be upgraded in phase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>