force-app/main/default/objects/FundingAwardAmendment/fields/No_homes_with_installs_complete_KPI_4__c.field-meta.xml
<CustomField>
    <fullName>No_homes_with_installs_complete_KPI_4__c</fullName>
    <inlineHelpText>No. of homes with installations completed (KPI 4)</inlineHelpText>
    <label>No. homes with installs complete (KPI 4)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>