force-app/main/default/objects/FundingAwardAmendment/fields/No_of_homes_to_be_upgraded_to_EPC_Croll__c.field-meta.xml
<CustomField>
    <fullName>No_of_homes_to_be_upgraded_to_EPC_Croll__c</fullName>
    <label>No. of homes to be upgraded to EPC C</label>
    <summarizedField>Change_Control_Request_Line_Item__c.No_of_Homes_to_EPC_C__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>