force-app/main/default/objects/FundingAwardAmendment/fields/Notifies_of_any_key_changes__c.field-meta.xml
<CustomField>
    <fullName>Notifies_of_any_key_changes__c</fullName>
    <inlineHelpText>GR notifies of any key changes to delivery team for that Phase (e.g. Lead Project Manager)</inlineHelpText>
    <label>Notifies of any key changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>