force-app/main/default/objects/FundingAwardAmendment/fields/On_gas_grid_LCHroll__c.field-meta.xml
<CustomField>
    <fullName>On_gas_grid_LCHroll__c</fullName>
    <label>On gas grid LCH</label>
    <summarizedField>Change_Control_Request_Line_Item__c.No_of_Homes_for_On_Gas_grid_LCH_Uplift__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>