force-app/main/default/objects/FundingAwardAmendment/fields/Other_Changes_from__c.field-meta.xml
<CustomField>
    <fullName>Other_Changes_from__c</fullName>
    <label>Other Changes - from</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>