force-app/main/default/objects/FundingAwardAmendment/fields/Other_Changes_to__c.field-meta.xml
<CustomField>
    <fullName>Other_Changes_to__c</fullName>
    <label>Other Changes - to</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>