force-app/main/default/objects/FundingAwardAmendment/fields/Parent_Change_Control_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Change_Control_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Change Control request that contains a rollup of all the values submitted from a change request on the portal.</description>
    <label>Parent Change Control Request</label>
    <referenceTo>FundingAwardAmendment</referenceTo>
    <relationshipLabel>Change Control Requests</relationshipLabel>
    <relationshipName>Change_Control_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>